script/app/refine/parser/antlr_generated/DSLParser.py
# Generated from DSL.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DSLParser ( Parser ):

    grammarFileName = "DSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'where'", "'not'", "'and'", "'or'", "'match'", "'is'", 
                     "'contain'", "'in'", "'notIn'", "'=='", "'!='", "'('", 
                     "')'", "'.'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "STRING_LITERAL", "NUMBER", "BOOLEAN", 
                      "WHERE", "NOT", "AND", "OR", "MATCH", "IS", "CONTAIN", 
                      "IN", "NOT_IN", "EQ", "NE", "LPAREN", "RPAREN", "DOT", 
                      "COMMA", "SEMICOLON", "IDENTIFIER", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_query = 0
    RULE_nestedQuery = 1
    RULE_entityDecl = 2
    RULE_nodeType = 3
    RULE_alias = 4
    RULE_condition = 5
    RULE_atomicCondition = 6
    RULE_valueMatch = 7
    RULE_attributeOnly = 8
    RULE_relMatch = 9
    RULE_attribute = 10
    RULE_propertyName = 11
    RULE_value = 12
    RULE_identifier = 13
    RULE_stringLiteral = 14
    RULE_numberLiteral = 15
    RULE_booleanLiteral = 16
    RULE_valueComp = 17
    RULE_nodeComp = 18

    ruleNames =  [ "query", "nestedQuery", "entityDecl", "nodeType", "alias", 
                   "condition", "atomicCondition", "valueMatch", "attributeOnly", 
                   "relMatch", "attribute", "propertyName", "value", "identifier", 
                   "stringLiteral", "numberLiteral", "booleanLiteral", "valueComp", 
                   "nodeComp" ]

    EOF = Token.EOF
    STRING_LITERAL=1
    NUMBER=2
    BOOLEAN=3
    WHERE=4
    NOT=5
    AND=6
    OR=7
    MATCH=8
    IS=9
    CONTAIN=10
    IN=11
    NOT_IN=12
    EQ=13
    NE=14
    LPAREN=15
    RPAREN=16
    DOT=17
    COMMA=18
    SEMICOLON=19
    IDENTIFIER=20
    WS=21
    LINE_COMMENT=22
    BLOCK_COMMENT=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entityDecl(self):
            return self.getTypedRuleContext(DSLParser.EntityDeclContext,0)


        def WHERE(self):
            return self.getToken(DSLParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(DSLParser.ConditionContext,0)


        def SEMICOLON(self):
            return self.getToken(DSLParser.SEMICOLON, 0)

        def EOF(self):
            return self.getToken(DSLParser.EOF, 0)

        def getRuleIndex(self):
            return DSLParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = DSLParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.entityDecl()
            self.state = 39
            self.match(DSLParser.WHERE)
            self.state = 40
            self.condition()
            self.state = 41
            self.match(DSLParser.SEMICOLON)
            self.state = 42
            self.match(DSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NestedQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entityDecl(self):
            return self.getTypedRuleContext(DSLParser.EntityDeclContext,0)


        def WHERE(self):
            return self.getToken(DSLParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(DSLParser.ConditionContext,0)


        def getRuleIndex(self):
            return DSLParser.RULE_nestedQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNestedQuery" ):
                listener.enterNestedQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNestedQuery" ):
                listener.exitNestedQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNestedQuery" ):
                return visitor.visitNestedQuery(self)
            else:
                return visitor.visitChildren(self)




    def nestedQuery(self):

        localctx = DSLParser.NestedQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_nestedQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.entityDecl()
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 45
                self.match(DSLParser.WHERE)
                self.state = 46
                self.condition()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodeType(self):
            return self.getTypedRuleContext(DSLParser.NodeTypeContext,0)


        def alias(self):
            return self.getTypedRuleContext(DSLParser.AliasContext,0)


        def getRuleIndex(self):
            return DSLParser.RULE_entityDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityDecl" ):
                listener.enterEntityDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityDecl" ):
                listener.exitEntityDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntityDecl" ):
                return visitor.visitEntityDecl(self)
            else:
                return visitor.visitChildren(self)




    def entityDecl(self):

        localctx = DSLParser.EntityDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_entityDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.nodeType()
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 50
                self.alias()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(DSLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return DSLParser.RULE_nodeType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeType" ):
                listener.enterNodeType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeType" ):
                listener.exitNodeType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeType" ):
                return visitor.visitNodeType(self)
            else:
                return visitor.visitChildren(self)




    def nodeType(self):

        localctx = DSLParser.NodeTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nodeType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(DSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AliasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(DSLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return DSLParser.RULE_alias

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlias" ):
                listener.enterAlias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlias" ):
                listener.exitAlias(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlias" ):
                return visitor.visitAlias(self)
            else:
                return visitor.visitChildren(self)




    def alias(self):

        localctx = DSLParser.AliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_alias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(DSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomicCondition(self):
            return self.getTypedRuleContext(DSLParser.AtomicConditionContext,0)


        def NOT(self):
            return self.getToken(DSLParser.NOT, 0)

        def LPAREN(self):
            return self.getToken(DSLParser.LPAREN, 0)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSLParser.ConditionContext)
            else:
                return self.getTypedRuleContext(DSLParser.ConditionContext,i)


        def RPAREN(self):
            return self.getToken(DSLParser.RPAREN, 0)

        def AND(self):
            return self.getToken(DSLParser.AND, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DSLParser.COMMA)
            else:
                return self.getToken(DSLParser.COMMA, i)

        def OR(self):
            return self.getToken(DSLParser.OR, 0)

        def getRuleIndex(self):
            return DSLParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = DSLParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.atomicCondition()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(DSLParser.NOT)
                self.state = 59
                self.match(DSLParser.LPAREN)
                self.state = 60
                self.condition()
                self.state = 61
                self.match(DSLParser.RPAREN)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.match(DSLParser.AND)
                self.state = 64
                self.match(DSLParser.LPAREN)
                self.state = 65
                self.condition()
                self.state = 68 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 66
                    self.match(DSLParser.COMMA)
                    self.state = 67
                    self.condition()
                    self.state = 70 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==18):
                        break

                self.state = 72
                self.match(DSLParser.RPAREN)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.match(DSLParser.OR)
                self.state = 75
                self.match(DSLParser.LPAREN)
                self.state = 76
                self.condition()
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 77
                    self.match(DSLParser.COMMA)
                    self.state = 78
                    self.condition()
                    self.state = 81 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==18):
                        break

                self.state = 83
                self.match(DSLParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomicConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valueMatch(self):
            return self.getTypedRuleContext(DSLParser.ValueMatchContext,0)


        def relMatch(self):
            return self.getTypedRuleContext(DSLParser.RelMatchContext,0)


        def attributeOnly(self):
            return self.getTypedRuleContext(DSLParser.AttributeOnlyContext,0)


        def getRuleIndex(self):
            return DSLParser.RULE_atomicCondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomicCondition" ):
                listener.enterAtomicCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomicCondition" ):
                listener.exitAtomicCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomicCondition" ):
                return visitor.visitAtomicCondition(self)
            else:
                return visitor.visitChildren(self)




    def atomicCondition(self):

        localctx = DSLParser.AtomicConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atomicCondition)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.valueMatch()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.relMatch()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.attributeOnly()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(DSLParser.AttributeContext,0)


        def valueComp(self):
            return self.getTypedRuleContext(DSLParser.ValueCompContext,0)


        def value(self):
            return self.getTypedRuleContext(DSLParser.ValueContext,0)


        def getRuleIndex(self):
            return DSLParser.RULE_valueMatch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueMatch" ):
                listener.enterValueMatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueMatch" ):
                listener.exitValueMatch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueMatch" ):
                return visitor.visitValueMatch(self)
            else:
                return visitor.visitChildren(self)




    def valueMatch(self):

        localctx = DSLParser.ValueMatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_valueMatch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.attribute()
            self.state = 93
            self.valueComp()
            self.state = 94
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeOnlyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(DSLParser.AttributeContext,0)


        def getRuleIndex(self):
            return DSLParser.RULE_attributeOnly

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeOnly" ):
                listener.enterAttributeOnly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeOnly" ):
                listener.exitAttributeOnly(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributeOnly" ):
                return visitor.visitAttributeOnly(self)
            else:
                return visitor.visitChildren(self)




    def attributeOnly(self):

        localctx = DSLParser.AttributeOnlyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attributeOnly)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.attribute()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(DSLParser.AttributeContext,0)


        def nodeComp(self):
            return self.getTypedRuleContext(DSLParser.NodeCompContext,0)


        def nestedQuery(self):
            return self.getTypedRuleContext(DSLParser.NestedQueryContext,0)


        def getRuleIndex(self):
            return DSLParser.RULE_relMatch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelMatch" ):
                listener.enterRelMatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelMatch" ):
                listener.exitRelMatch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelMatch" ):
                return visitor.visitRelMatch(self)
            else:
                return visitor.visitChildren(self)




    def relMatch(self):

        localctx = DSLParser.RelMatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_relMatch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.attribute()
            self.state = 99
            self.nodeComp()
            self.state = 100
            self.nestedQuery()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alias(self):
            return self.getTypedRuleContext(DSLParser.AliasContext,0)


        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(DSLParser.DOT)
            else:
                return self.getToken(DSLParser.DOT, i)

        def propertyName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DSLParser.PropertyNameContext)
            else:
                return self.getTypedRuleContext(DSLParser.PropertyNameContext,i)


        def getRuleIndex(self):
            return DSLParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = DSLParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.alias()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17:
                self.state = 103
                self.match(DSLParser.DOT)
                self.state = 104
                self.propertyName()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(DSLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return DSLParser.RULE_propertyName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertyName" ):
                listener.enterPropertyName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertyName" ):
                listener.exitPropertyName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyName" ):
                return visitor.visitPropertyName(self)
            else:
                return visitor.visitChildren(self)




    def propertyName(self):

        localctx = DSLParser.PropertyNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_propertyName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(DSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodeType(self):
            return self.getTypedRuleContext(DSLParser.NodeTypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(DSLParser.IdentifierContext,0)


        def stringLiteral(self):
            return self.getTypedRuleContext(DSLParser.StringLiteralContext,0)


        def numberLiteral(self):
            return self.getTypedRuleContext(DSLParser.NumberLiteralContext,0)


        def booleanLiteral(self):
            return self.getTypedRuleContext(DSLParser.BooleanLiteralContext,0)


        def getRuleIndex(self):
            return DSLParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = DSLParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_value)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.nodeType()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.identifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.stringLiteral()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                self.numberLiteral()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 116
                self.booleanLiteral()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(DSLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return DSLParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = DSLParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(DSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(DSLParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return DSLParser.RULE_stringLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringLiteral" ):
                listener.enterStringLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringLiteral" ):
                listener.exitStringLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringLiteral" ):
                return visitor.visitStringLiteral(self)
            else:
                return visitor.visitChildren(self)




    def stringLiteral(self):

        localctx = DSLParser.StringLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_stringLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(DSLParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(DSLParser.NUMBER, 0)

        def getRuleIndex(self):
            return DSLParser.RULE_numberLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberLiteral" ):
                listener.enterNumberLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberLiteral" ):
                listener.exitNumberLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberLiteral" ):
                return visitor.visitNumberLiteral(self)
            else:
                return visitor.visitChildren(self)




    def numberLiteral(self):
